yeni özellik: tüm yazarların engelini kaldırma işlemi optimize edilerek süreç hızlandırıldı.
bug fix: yükleme ve güncellemeden sonra geriye dönük uyumluluk sağlanamadığı için eklentinin ayarlarının sıfırlanması sağlandı.

v2.3
yayın: 
yeni özellik: bir yazarı takip eden herkesi engelleme butonu eklendi.
yeni özellik: eklenti menüsündeki bazı butonlar ekşi sözlük arayüzüne taşındı. 
bug fix: bir başka engel işlemi devam ederken cooldown sürecinde ekşi sözlük arayüzündeki butonlar çalışmıyordu (engel limitinden dolayı).
         alternatif ekşi engel butonlarının, ekşi sözlük yazar sayfasındaki menüye eklenmesiyle bu işlemler de kuyruğa alınarak problem çözüldü.

Versiyon notları (detaylı) 
-------------------------------------------------
v1.0  
yayın: 06.05.2022
kullanıcıdan alınan listedeki yazarlar engellendi. 
liste iki formatı destekliyor: url ve yazar isimleri [v1.2 ile kaldırıldı]
liste validate edildi. [v1.2 ile kaldırıldı]
sayfa  aktif değilken (aktif tab) uygulamanın çalışmasının durması engellendi.
son sayfanın otomatik olarak kapanması sağlandı.
açılan tab kapatıldığında yeniden açılarak engellemenin devam etmesi sağlandı. [v1.2 ile kaldırıldı]  
gereksiz izinler tespit edildi ve manifestten çıkarıldı: active tab, declerative content, downloads.
'message port closed before a response was received' hatası giderildi. 
uygulamanın iki kez başlaması engellendi.
uygulamayı yarısında durdurma özelliği bir buton ile sağlandı. [v1.2 ile kaldırıldı] 
tüm sitedelerde değil sadece ekşide çalışması (injected js'nin) sağlandı.
popup vs ayar sayfası tasarımı yapıldı.
ikon tasarımı yapıldı.
kayıtları getir sayfasında undefined check yapıldı. 
takip edilen yazarlar engellemiyor. [v2.0 ile kaldırıldı.]

v1.1
yayın: 09.05.2022
eklenti marketinde ikonların bazılarının arkasının beyaz olduğu fark edildi, transparan hale getirildi.

v1.2 
gönderim: 24.09.2022 - yayın: 27.09.2022
yeni özellik: bir entry'i favlayan yazarları engellemesi